Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/075_shadowing_decl_return_type.xi
f(x:int) : int
f(x:int) : bool

//@PRACOWNIA
//@should_not_typecheck
